--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
 											<input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password">
 										</div>
 										<div class="actions clearfix">
-											<a href="forgot-pwd.html">forgot password?</a>
+											<a href="#">forgot password?</a>
 											<button type="submit" class="btn btn-primary">Login</button>
 										</div>
 										
