udpated the user management section along with login and template

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 		<div class="container">
 			<div class="login-screen row align-items-center">
 				<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-					<form action="">
+					<form method='post'>
 						<div class="login-container">
 							<div class="row no-gutters">
 								<div class="col-xl-4 col-lg-5 col-md-6 col-sm-12">
@@ -36,12 +36,12 @@
 										</a>
 										<div class="input-group">
 											<span class="input-group-addon" id="username"><i class="icon-account_circle"></i></span>
-											<input type="text" class="form-control" placeholder="Username" aria-label="username" aria-describedby="username">
+											<input type="text" class="form-control" name='username' placeholder="Username" aria-label="username" aria-describedby="username">
 										</div>
 										<br>
 										<div class="input-group">
 											<span class="input-group-addon" id="password"><i class="icon-verified_user"></i></span>
-											<input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password">
+											<input type="password" name='password' class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password">
 										</div>
 										<div class="actions clearfix">
 											<a href="#">forgot password?</a>
