updated the code

--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -21,7 +21,24 @@
             </ul>
         </li>
        <%}%>
-        
+       <li class="">
+        <a href="#" class="has-arrow" aria-expanded="false">
+            <span class="has-icon">
+                <i class="icon-storage"></i>
+            </span>
+            <span class="nav-title">Warehouse</span>
+        </a>
+        <ul aria-expanded="false" class="collapse in">
+                <li>
+                        <a href='/warehouse/list-manifest' class="">Manfiest</a>
+                 </li>
+           
+            <li>
+                <a href='/warehouse/packages'>Add Packages</a>
+            </li>
+          
+        </ul>
+    </li>
      
         <!-- <li>
             <a href="#" class="has-arrow" aria-expanded="false">
