--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -5,7 +5,7 @@
   
         <div class='card'>
               <div class="card-header col-md-12">
-                 <h3> Manifrest M-000 Data Entry</h3>
+                 <h3> Manifrest M-<%=mid %> Data Entry</h3>
               </div>
               <div class="card-body">
            
