--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -1,7 +1,7 @@
 <% layout('./shared/__template')%>
 <div class='gutters'>
     <div class='col-xl-12 col-lg-6 col-md-12 col-sm-12'>
-  
+    <input type='hidden' id='mid' value="<%=mid%>" />
   
         <div class='card'>
               <div class="card-header col-md-12">
@@ -109,7 +109,7 @@
                     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
                       <div class='row'>
                           <div class='col-md-3'>
-                                <form method='post'>
+                                <form method='post' id='mailPackageForm' >
                                         <div class='form-group'>
                                                 <label>Bag </label>
                                                 <input type='text' class='form-control bag' name='bag' id='bag' required />
@@ -121,7 +121,7 @@
                                     <div class='form-group'>
                                         <label>Tracking #</label>
                                         <input type='hidden' class='mid' value='<%=mid %>'/>
-                                        <input type='hidden' class='mtype' value='cargo'/>
+                                        <input type='hidden' class='mtype' value='mail'/>
                                         <input type='text' class='form-control trackingNo' name='trackingNo'  required />
                                     </div>
                                     <div class='form-group'>
@@ -151,7 +151,7 @@
                                 </form>
                           </div>
                           <div class='col-md-9'>
-                              <table id='mailTable' class='table table-bordered table-inverse m-0'>
+                              <table id='mailTable' class='table table-bordered table-inverse ' style='width:100%;'>
                                  
                               </table>
                           </div>
@@ -161,10 +161,10 @@
                     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab" aria-expanded="false">
                         <div class='row'>
                             <div class='col-md-3'>
-                                  <form method='post'>
+                                  <form method='post' id='cargoPackageForm'>
                                           <div class='form-group'>
                                                   <label>Skid </label>
-                                                  <input type='text' class='form-control' name='bag' id='bag' required />
+                                                  <input type='text' class='form-control skid' name='skid'  required />
                                               </div>
                                       <div class='form-group'>
                                           <label>SkyBox <span id='' class='text-info title customerName'></span></label>
@@ -203,7 +203,7 @@
                                   </form>
                             </div>
                             <div class='col-md-9'>
-                                <table id='js_table' class='table table-bordered table-inverse m-0'>
+                                <table id='cargoTable' class='table table-bordered table-inverse '>
                                   
                                 </table>
                             </div>
