--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -203,7 +203,7 @@
                                   </form>
                             </div>
                             <div class='col-md-9'>
-                                <table id='cargoTable' class='table table-bordered table-inverse '>
+                                <table id='cargoTable' class='table table-bordered table-inverse ' style='width:100%'>
                                   
                                 </table>
                             </div>
@@ -216,6 +216,26 @@
     </div>
   </div>
   
+  <div class="modal fade" id="confirmPkgDel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel2">Confirmation Required</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type='hidden' id='pkg-tracking' />
+               Are you sure you want to delete this package? 
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger rm-package" id='rmPackage'>Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
   <% block('scripts').append('<script src="/vendor/datatables/dataTables.min.js"></script>')%>
   <% block('scripts').append('<script src="/vendor/datatables/dataTables.bootstrap.min.js"></script>')%>
   
